--- a/Apache.yml
+++ b/Apache.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: webservers
+- hosts: lampstack
   vars:
     http_port: 80
     max_clients: 200
@@ -8,7 +8,7 @@
   - name: ensure apache is at the latest version
     yum: name=httpd state=latest
   - name: write the apache config file
-    template: src=/srv/httpd.j2 dest=/etc/httpd.conf
+    template: /etc/httpd/conf/httpd.conf
     notify:
     - restart apache
   - name: ensure apache is running (and enable it at boot)
