--- a/Apache.yml
+++ b/Apache.yml
@@ -8,7 +8,7 @@
   - name: ensure apache is at the latest version
     yum: name=httpd state=latest
   - name: write the apache config file
-    template: /etc/httpd/conf/httpd.conf
+    template: src=/srv/httpd.j2 dest=/etc/httpd.conf
     notify:
     - restart apache
   - name: ensure apache is running (and enable it at boot)
